# trueSV

./: LICENSE  README.md  pyproject.toml  requirements.txt
trueSV/: cli.py
trueSV/core/: model_loader.py  pipeline.py  postprocess.py  utils.py  workers.py
